fix(styles): update layout for characteristics wrapper to improve alignment

--- a/styles/actor.less
+++ b/styles/actor.less
@@ -677,9 +677,7 @@
     grid-column: 1;
     grid-row: 2;
     display: flex;
-    /*      grid-template-columns: 1fr 1fr;
-          grid-template-rows: repeat(3, 1fr);*/
-    justify-items: center;
+    justify-content: center;
     padding: 1.5rem 0 0;
 
     .characteristics-wrapper {
